Warnings and leaks removal